--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <p> this is our localrepo</p>
 <P>this is my new feature(dropdown)</P>
-<p>this is my new feature</p>
+<p>this is my new feature(button)</p>
